finish working on side menu

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
     </ion-header>
     <ion-content>
         <ion-list>
-          <button ion-item (click)="onLoad(tabsPage)">
+          <button ion-item (click)="onLoad(TabsPage)">
             <ion-icon name="quote" item-left></ion-icon>
             Quotes
           </button>
